fix bug when menu applications name too long
Type: BF
Jira: HALO-1140

--- a/client/components/side_menu/style/index.less
+++ b/client/components/side_menu/style/index.less
@@ -61,8 +61,13 @@
         font-size: 32px;
       }
       > span {
+        display: block;
         line-height: 24px;
+        width: 96px;
         text-align: center;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
       &::after{
         display: block;
